# sphinxcontrib-typst-math

./: LICENSE  README.rst  pyproject.toml  setup.cfg
src/sphinxcontrib/typst_math/: __init__.py
tests/: conftest.py
