[tool.poetry]
name = "sphinxcontrib-typst-math"
version = "0.1.0"
description = "A Sphinx extension allowing math in typst syntax to be rendered as image."
authors = ["M.J.W. Snippe"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
